--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -19,7 +19,7 @@ gap: 20px;
     align-items: center;
     gap: 30px;
     text-align: center;
-    margin: 20px,0px;
+    margin: 20px 0px;
     overflow-x: scroll;
 
 }
@@ -47,4 +47,9 @@ min-width: 80px;
     height: 2px;
     background-color: #e2e2e2;
     border: none;
+}
+
+.explore-menu-list-item .active{
+    border:4px solid tomato;
+    padding: 2px;
 }
