--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -61,6 +61,63 @@
     right: -8px;
     
   }
+
+  @media (max-width:1050px){
+    .navbar.logo{
+      width:140px
+    }
+.navbar-menu{
+  gap: 20px;
+  font-size: 17px;
+}
+.navar-right{
+  gap:30px;
+}
+.navar-right img{
+  width: 22px;
+}
+.navbar-right button{
+  padding: 8px 25px;
+}
+
+}
+
+@media (max-width:900px){
+  .navbar.logo{
+    width:120px
+  }
+.navbar-menu{
+gap: 15px;
+font-size: 16px;
+}
+.navar-right{
+gap:20px;
+}
+.navar-right img{
+width: 20px;
+}
+.navbar-right button{
+padding: 7px 20px;
+font-size: 15px;
+}
+
+}
+@media (max-width:750px){
+  
+.navbar-menu{
+display: none;
+}
+
+
+}
+
+
+
+
+  
+
+
+  
     
   
   
